# wasm_run

./: .gitignore  .last_build_id  CHANGELOG.md  Cargo.toml  README.md  analysis_options.yaml  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  melos.yaml  pubspec.yaml  version.json
.github/: codecov.yaml  covecov.yaml  dependabot.yaml
.github/workflows/: build.yaml  create-release.yaml  deploy-github-pages.yaml  publish-release.yaml
assets/: AssetManifest.bin.json  AssetManifest.json  AssetManifest.smcbin  NOTICES
canvaskit/: canvaskit.js  skwasm.wasm
canvaskit/chromium/: canvaskit.js
scripts/: build-android.sh  build-apple.sh  build-other.sh  build-rust-wasm-examples.sh  config_api.dart  config_api.sh  test.sh  version.sh
